# open-graph-memory

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  code.html  pyproject.toml
.github/workflows/: ci.yml  ghcr.yml
apps/api/: Dockerfile  alembic.ini
apps/api/app/: agent_memory.py  arq_worker.py  async_runner.py  auth.py  chunking.py  community_reports.py  config.py  datasets.py  db.py  dependencies.py  documents.py  graph_analytics.py  graph_api.py  graph_cleanup.py  graph_consolidation.py  health.py  (+20 more)
apps/web/: .eslintrc.cjs  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
apps/worker/: Dockerfile
deployments/: Caddyfile  docker-compose.external-s3.yml  docker-compose.ghcr-external.yml  docker-compose.prod.yml  docker-compose.standalone-db.yml  docker-compose.yml
deployments/multihost/: .env.example  README.md  app.yml  dispatcher.yml  edge.Caddyfile  edge.yml  graph-worker.yml  neo4j.yml  postgres.yml  redis.yml  worker.yml
deployments/rustfs/: bootstrap.sh
docs/: agent-memory-preview.md  architecture.md  community-graphrag.md  dashboard.md  dataset-upload.md  deployment.md  graph-extraction.md  graphrag-refactor-target-architecture.md  hybrid-retrieval.md  liteparse-compatibility.md  liteparse-knowledge-graph-plan.md  plugin-system.md  quickstart.md  sdk-python.md  security-final-audit.md  service-configuration.md  vector-rag.md
docs/adr/: 0001-0001-repository-structure.md  0002-0002-authoritative-stores.md  0003-0003-indexing-state-machine.md  0004-0004-stable-identifiers.md  0005-0005-celery-policy.md  0006-0006-object-storage.md  0007-0007-dataset-isolation.md  0008-0008-provider-capabilities.md
docs/runbooks/: backup-restore.md  operations.md
evaluation/: README.md  community_evaluator.py  evaluator.py  m3_evaluator.py  m3_runtime_gate.py  m4_evaluator.py  m4_runtime_gate.py  memory_evaluator.py  runtime_gate.py  test_community_evaluator.py  test_evaluator.py  test_m3_evaluator.py  test_m4_evaluator.py
evaluation/fixtures/: v1.0.json
evaluation/golden/: v1.0.json
evaluation/m3_golden/: v1.0.json
evaluation/m4_golden/: fixture-v1.1.json  v1.0.json
examples/plugins/: deterministic_embedding.py
scripts/: backup.sh  build.sh  check.sh  create-dashboard-project.ps1  dev.sh  lint.sh  m1-runtime-gate.sh  m2-runtime-gate.sh  m3-runtime-gate.sh  m4-runtime-gate.sh  migrate.sh  remote-check-neo4j.sh  remote-create-ui-project.py  remote-e2e-smoke.py  remote-generate-multihost-env.sh  remote-install-docker.sh  remote-multihost-preflight.py  restore.sh  runtime-gate.sh  security-gate.sh  test.sh  validate-multihost-compose.py  validate-production-compose.py
(+125 files in other folders)
