[project]
name = "open-graph-memory"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115,<1", "uvicorn>=0.34,<1", "pydantic-settings>=2.7,<3", "sqlalchemy[asyncio]>=2.0,<3", "asyncpg>=0.30,<1", "alembic>=1.14,<2", "redis>=5,<6", "celery>=5.4,<6", "httpx>=0.28,<1", "structlog>=24,<26", "boto3>=1.35,<2", "python-multipart>=0.0.18,<1"]
[dependency-groups]
dev = ["pytest>=8,<9", "pytest-asyncio>=0.25,<1", "ruff>=0.9,<1", "mypy>=1.14,<2"]
[build-system]
requires=["hatchling"]
build-backend="hatchling.build"
[tool.hatch.build.targets.wheel]
packages=["apps/api/app", "packages/core/src/open_graph_core"]
[tool.pytest.ini_options]
pythonpath=["apps/api", "packages/core/src"]
asyncio_mode="auto"
[tool.ruff]
line-length=100
target-version="py312"
[tool.ruff.lint]
select=["E","F","I","UP","B"]
[tool.mypy]
python_version="3.12"
strict=true
packages=["app","open_graph_core"]
mypy_path=["apps/api","packages/core/src"]
[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["boto3", "botocore.*"]
ignore_missing_imports = true
