[project]
name = "open-graph-memory"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.34,<1",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "redis>=5,<6",
    "arq>=0.26,<1",
    "httpx>=0.28,<1",
    "structlog>=24,<26",
    "boto3>=1.35,<2",
    "python-multipart>=0.0.18,<1",
    "pypdf>=6.13.3,<7",
    "liteparse==2.6.0",
    "markdown-it-py>=3,<4",
    "beautifulsoup4>=4.12,<5",
    "lxml>=6.1,<7",
    "networkx>=3.4,<4",
]
[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=0.25,<2",
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
    "types-networkx>=3.4,<4",
]
[build-system]
requires=["hatchling"]
build-backend="hatchling.build"
[tool.hatch.build.targets.wheel]
packages=["apps/api/app", "packages/core/src/open_graph_core", "packages/contracts/src/open_graph_contracts", "packages/sdk/src/open_graph_sdk"]
[tool.pytest.ini_options]
pythonpath=["apps/api", "packages/core/src", "packages/contracts/src", "packages/sdk/src"]
asyncio_mode="auto"
[tool.ruff]
line-length=100
target-version="py312"
[tool.ruff.lint]
select=["E","F","I","UP","B"]
[tool.mypy]
python_version="3.12"
strict=true
packages=["app","open_graph_core","open_graph_contracts","open_graph_sdk"]
mypy_path=["apps/api","packages/core/src","packages/contracts/src", "packages/sdk/src"]
[[tool.mypy.overrides]]
module = "arq.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["boto3", "botocore.*"]
ignore_missing_imports = true
